src/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Award_Amount__c</fullName>
        <description>Field to save the value of &quot;Recommended Award Amount&quot; from its Application. 
Populated through &quot;CreateAward&quot; trigger.</description>
        <label>Recommended Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Count__c</fullName>
        <formula>Organization__r.Red_Flag_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flag Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <formula>IMAGE( IF(Red_Flag_Count__c &gt; 0, &quot;img/samples/flag_red.gif&quot;,&quot;img/samples/flag_green.gif&quot; ),&quot;&quot;, 20, 20 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Active_Until__c</fullName>
        <formula>Organization__r.Registration_Active_until__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Active Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_for_rework__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return for rework?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAM__c</fullName>
        <formula>Organization__r.SAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGO_Email__c</fullName>
        <description>Email of the Senior Grants Officer. Field to send Approval emails.</description>
        <label>SGO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPO_Certification_Date__c</fullName>
        <description>Field to populate the date when SPO takes action on Award record.</description>
        <label>SPO Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPO_Email__c</fullName>
        <description>Email of the Senior Program Officer. Field to send Approval emails.</description>
        <label>SPO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPO__c</fullName>
        <description>Field to populate the SPO Name who took action on Award record.</description>
        <label>SPO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfactory_Record_Executing_Programs__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Satisfactory Record Executing Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Senior_Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Program_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Program Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_XO_for_De_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for VISTA Amendment approvals. Field is checked by a method in AwardExtension when the Status changes to &quot;Awaiting XO De-Commitment&quot;</description>
        <label>Sent to XO for De-Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Conditions__c</fullName>
        <label>Special Conditions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sponsor_e_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant should check this checkbox before Signing the Agreement.
Changed Label as per # 646.</description>
        <label>I agree to the above Agreement Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_CLR_Code__c</fullName>
        <description>Used for Grant #.</description>
        <formula>IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;CA&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WA&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AK&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;HI&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ID&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MT&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NV&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;OR&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;UT&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WY&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;GU&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AS&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MP&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;PA&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NJ&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ME&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NH&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;RI&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;CT&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VT&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MA&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;DE&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MD&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;PR&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VI&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;DC&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IL&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;OH&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WI&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IN&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IA&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MI&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MN&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NE&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;SD&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ND&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;FL&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;GA&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AL&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MS&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;TN&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;SC&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;KY&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WV&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VA&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NC&quot;) , &quot;S&quot;,
&quot;W&quot;))))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>State CLR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <description>DDP</description>
        <formula>Text(Application_ID__r.Project__r.Organization__r.States__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>States</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Award__c</fullName>
        <formula>Application_ID__r.Sub_Application__c</formula>
        <label>Sub Award?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_budgets_for_multi_year_grants__c</fullName>
        <formula>TEXT(Application_ID__r.NOFA_RFP__r.Sub_Budgets_for_Multi_Year_Grants__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-budgets for multi-year grants</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_FAPIIS_Review__c</fullName>
        <label>Subject to FAPIIS Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Recommended_MSYs__c</fullName>
        <description>Field to save the value of &quot;Total Recommended MSYs&quot; from its Application. 
Populated through &quot;CreateAward&quot; trigger.</description>
        <label>Total Recommended MSYs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VISTA_Approval_Flow__c</fullName>
        <description>Field used for VISTA Amendment Approvals. Value gets updated by a Method in AwardExtension.</description>
        <label>VISTA Approval Flow</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verified_Via__c</fullName>
        <formula>TEXT(Organization__r.Verified_via__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verified Via</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waitlist_Justification__c</fullName>
        <description>Waitlist options for NCCC and Cash No Awards.</description>
        <label>Waitlist Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Geographic Project Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Issue Area Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Type Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Scope Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Campus Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anticipated Campus Resources Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anticipated Sponsor Resources Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor Already Served by NCCC within Class Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Can Be Accomplished in Another Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor Prefers Project Accomplished in Another Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disasters Response Took Precedence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCS Special Priority Took Precedence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Requires RD Approval)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XO_CSHR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSHR Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XO_Email__c</fullName>
        <description>Email of the Executive Officer. Field to send Approval emails.</description>
        <label>XO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Year_of_Grant__c</fullName>
        <formula>Application_ID__r.Year_of_Grant__c</formula>
        <label>Year of Grant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <description>DDP</description>
        <formula>Application_ID__r.Project__r.Organization__r.Zip1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Award approvals.</description>
        <label>eSigned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of__c</fullName>
        <formula>IF(Number_of_Child_Awards__c = 0, 0, 
IF(Number_of_Child_Awards__c = 1, 1, 
Number_of_Child_Awards__c - 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>of #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_email__c</fullName>
        <label>test email</label>
        <type>Email</type>
    </fields>
    <label>Award</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Organization__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Cost_Share__c</columns>
        <columns>Program_Officer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amendment_Awards</fullName>
        <columns>NAME</columns>
        <columns>Master_Award__c</columns>
        <columns>Can_I_amend__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Amendment</value>
        </filters>
        <filters>
            <field>Grant_Status__c</field>
            <operation>equals</operation>
            <value>Awarded</value>
        </filters>
        <filters>
            <field>Master_Award__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Amendment Awards</label>
    </listViews>
    <listViews>
        <fullName>Awarded_Grants</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Awarded Grants</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today2</fullName>
        <columns>NAME</columns>
        <columns>Master_Award__c</columns>
        <columns>Grant_Status__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Amendment__c</columns>
        <columns>of__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/5/2016 12:00 AM</value>
        </filters>
        <label>10/5/2016</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Awards</fullName>
        <columns>Organization_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Grant_Number__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Status__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Corporate_Program1__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Awards</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NCCC</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Cost_Share__c</columns>
        <columns>Program_Officer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Grant_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting PO Certification</value>
        </filters>
        <filters>
            <field>Corporate_Program1__c</field>
            <operation>equals</operation>
            <value>AmeriCorps NCCC</value>
        </filters>
        <label>NCCC</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Awards</fullName>
        <columns>NAME</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/15/2016 12:00 AM</value>
        </filters>
        <label>New Awards</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prime_Awards</fullName>
        <columns>NAME</columns>
        <columns>Grant_Status__c</columns>
        <columns>Can_I_amend__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Prime_Award</value>
        </filters>
        <filters>
            <field>Grant_Status__c</field>
            <operation>notEqual</operation>
            <value>Awarded,Expired,Closed</value>
        </filters>
        <label>Prime Awards</label>
    </listViews>
    <listViews>
        <fullName>Program_Beta_Testing</fullName>
        <columns>NAME</columns>
        <columns>Master_Award__c</columns>
        <columns>Organization__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Grant_Status__c</columns>
        <columns>Corporate_Program1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Grant_Status__c</field>
            <operation>equals</operation>
            <value>Awarded,Expired,Being Closed,Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>Points of Light Foundation</value>
        </filters>
        <label>Program Beta Testing</label>
    </listViews>
    <listViews>
        <fullName>VISTA_Awards</fullName>
        <columns>NAME</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Master_Award__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Performance_Period_Start_Date__c</columns>
        <columns>Grant_Performance_Period_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Program1__c</field>
            <operation>contains</operation>
            <value>VISTA</value>
        </filters>
        <label>VISTA Awards</label>
    </listViews>
    <listViews>
        <fullName>VISTA_Cost_Share</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Master_Award__c</columns>
        <columns>Cost_Share__c</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Program1__c</field>
            <operation>contains</operation>
            <value>VISTA</value>
        </filters>
        <label>VISTA Cost Share</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VISTA_Only</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Period_Start_Date__c</columns>
        <columns>Agreement_Period_End_Date__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>NOFO_RFP_Name_New__c</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Program1__c</field>
            <operation>equals</operation>
            <value>VISTA State</value>
        </filters>
        <label>VISTA Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>khalid</fullName>
        <columns>NAME</columns>
        <columns>Master_Award__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Grant_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/3/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Grant_Status__c</field>
            <operation>equals</operation>
            <value>Being Committed</value>
        </filters>
        <label>khalid</label>
    </listViews>
    <nameField>
        <label>Award ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Award</pluralLabel>
    <recordTypes>
        <fullName>App_Award</fullName>
        <active>true</active>
        <label>App Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prime_Award</fullName>
        <active>true</active>
        <label>Prime Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_App_Award</fullName>
        <active>true</active>
        <label>Sub App Award</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agreement_Period_End_Date</fullName>
        <active>true</active>
        <description>Agreement Period End Date must be greater than the date entered in the “Agreement Period Start Date” field.
US # 4783.</description>
        <errorConditionFormula>Agreement_Period_End_Date__c &lt;= Agreement_Period_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Agreement_Period_End_Date__c</errorDisplayField>
        <errorMessage>Agreement Period End Date must be greater than Agreement Period Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agreement_Period_End_Date_Required</fullName>
        <active>true</active>
        <description>Agreement Period End Date is required when Cash Grants on NOFO is No or Cash Grant is Optional.</description>
        <errorConditionFormula>AND (
OR(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;No&apos;), ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Optional&apos;)),
NOT(ISNEW()),
ISNULL( Agreement_Period_End_Date__c )
)</errorConditionFormula>
        <errorDisplayField>Agreement_Period_End_Date__c</errorDisplayField>
        <errorMessage>Agreement Period End Date is required when Cash Grants on NOFO is No or Cash Grant is Optional.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agreement_Period_Start_Date_Required</fullName>
        <active>true</active>
        <description>Agreement Period Start Date is required when Cash Grants on NOFO is No or Cash Grant is Optional.</description>
        <errorConditionFormula>AND (
OR(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;No&apos;), ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Optional&apos;)),
NOT(ISNEW()),
ISNULL( Agreement_Period_Start_Date__c )
)</errorConditionFormula>
        <errorDisplayField>Agreement_Period_Start_Date__c</errorDisplayField>
        <errorMessage>Agreement Period Start Date is required when Cash Grants on NOFO is No or Cash Grant is Optional.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_Name</fullName>
        <active>true</active>
        <description>Applicant cannot change Award Name.</description>
        <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot edit the Award Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_End_Date1</fullName>
        <active>true</active>
        <description>Date entered in this field must be greater than the date entered in the “Budget Period Start Date” field.
US # 4786</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;))),
 Budget_Period_End__c &lt;= Budget_Period_Start__c )</errorConditionFormula>
        <errorDisplayField>Budget_Period_End__c</errorDisplayField>
        <errorMessage>Budget Period End Date should begreater than Budget Period Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_End_Date2</fullName>
        <active>true</active>
        <description>Date entered must be less than or equal to the date in the “Grant Performance Period End Date” field on the award. 
US # 4786</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;))),
 Budget_Period_End__c &gt; Grant_Performance_Period_End_Date__c )</errorConditionFormula>
        <errorDisplayField>Budget_Period_End__c</errorDisplayField>
        <errorMessage>Budget Period End Date cannot be greater than Grant Performance Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_End_Date_Required</fullName>
        <active>true</active>
        <description>Budget_Period_End_Date_Required when Cash Grant = Yes</description>
        <errorConditionFormula>AND ( 
OR(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Yes&apos;), 
AND(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Optional&apos;), ISPICKVAL(Application_ID__r.Program_Type__c,&apos;Program Grant&apos;)), 
AND(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Optional&apos;), ISPICKVAL(Application_ID__r.Program_Type__c,&apos;Support Grant&apos;))), 
NOT(ISNEW()), 
ISNULL(  Budget_Period_End__c  ) 

)</errorConditionFormula>
        <errorDisplayField>Budget_Period_End__c</errorDisplayField>
        <errorMessage>Budget Period Start End Required when Cash Grant = Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_Start_Date</fullName>
        <active>true</active>
        <description>Date entered must be greater than or equal to the date in the “Grant Performance Period Start Date” field on the award.
US # 4786</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;))),
 Budget_Period_Start__c &lt; Grant_Performance_Period_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Budget_Period_Start__c</errorDisplayField>
        <errorMessage>Budget Period Start Date cannot be less than Grant Performance Period Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_Start_Date_Required</fullName>
        <active>true</active>
        <description>Budget_Period_Start_Date_Required when Cash Grant = Yes</description>
        <errorConditionFormula>AND ( 
OR(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Yes&apos;), 
AND(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Optional&apos;), ISPICKVAL(Application_ID__r.Program_Type__c,&apos;Program Grant&apos;)), 
AND(ISPICKVAL(NOFA_Name__r.Cash_Grants_Awards__c, &apos;Optional&apos;), ISPICKVAL(Application_ID__r.Program_Type__c,&apos;Support Grant&apos;))), 
NOT(ISNEW()), 
ISNULL(  Budget_Period_Start__c  ) 

)</errorConditionFormula>
        <errorDisplayField>Budget_Period_Start__c</errorDisplayField>
        <errorMessage>Budget Period Start Date Required when Cash Grant = Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enrollment_Period_End_Date1</fullName>
        <active>true</active>
        <description>Date entered in this field must be greater than the date entered in the “Enrollment Period Start Date” field.
US # 4785</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),

 Enrollment_Period_End_Date__c  &lt;= Enrollment_Period_Start_Date__c )</errorConditionFormula>
        <errorDisplayField>Enrollment_Period_End_Date__c</errorDisplayField>
        <errorMessage>Enrollment Period End Date should be greater then Enrollment Period Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enrollment_Period_End_Date2</fullName>
        <active>true</active>
        <description>Date date entered must be less than or equal to the date in the “Budget Period End Date” field on the award. 
US # 4785</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),

 Enrollment_Period_End_Date__c  &gt;  Budget_Period_End__c )</errorConditionFormula>
        <errorDisplayField>Enrollment_Period_End_Date__c</errorDisplayField>
        <errorMessage>Enrollment Period End Date cannot be greater than Budget Period End Date.</errorMessage>
    </validationRules>
</CustomObject>